--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "init-my",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Personal use cli tool for creating startup project from template.",
   "author": "Vincent0700 <wang.yuanqiu007@gmail.com",
   "email": "wang.yuanqiu007@gmail.com",
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
+    "npm-latest": "^2.0.0",
     "prettier": "^2.2.1",
     "webpack": "^5.23.0",
     "webpack-bundle-analyzer": "^4.4.0",
